--- a/app/src/main/res/layout/apply_activity.xml
+++ b/app/src/main/res/layout/apply_activity.xml
@@ -5,48 +5,55 @@
     <include
         android:id="@+id/title_include"
         layout="@layout/top_include" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center">
 
-        <EditText
-            android:id="@+id/apply_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:hint="@string/view_email"
-            android:inputType="textEmailAddress"
-            android:maxLines="1" />
-    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/view_applywait"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:layout_marginTop="30dp"/>
+
+    <TextView
+        android:id="@+id/apply_nickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="닉네임"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_margin="30dp"/>
+
+    <TextView
+        android:id="@+id/apply_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="이메일"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center">
+        android:orientation="horizontal">
 
         <Button
-            android:id="@+id/apply_couple_apply"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_refuse"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="@string/view_apply" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center">
+            android:layout_weight="1"
+            android:text="@string/refuse"
+            android:layout_margin="30dp"/>
 
         <Button
-            android:id="@+id/apply_couple_invite"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_consent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:text="@string/view_invite" />
+            android:layout_weight="1"
+            android:text="@string/consent"
+            android:layout_margin="30dp"/>
     </LinearLayout>
 </LinearLayout>
