가장 먼저 해야할일은 커플페이지에 뭐가 들어가야할지 설계
CoupleClass.java - 데이터베이스에 뭐가 들어가야할지 고민
UserClass.java - isCoupleConnect 넣어 커플신청을 했는지 안했는지 체크
Util.java - 커플고유아디를 위해 랜덤알파벳을 만듦
CoupleapplyActivity.java - 커플고유아이디 변경으로인한 커플 수락페이지도 변경
CoupleconnectActivity.java - 커플고유아이디 변경으로 커플명생성 및 체크
LoginActivity.java - 로그인시 커플신청을 했는지 체크하여 분기처리
MainClass.java - 메서드명 변경
SignUpActivity.java - UserClass가 변경되어서 파라미터 추가
connect_activity.xml - 커플명 추가
strings.xml - 커플명관련 문구 넣기

--- a/app/src/main/res/layout/connect_activity.xml
+++ b/app/src/main/res/layout/connect_activity.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/apply_email"
@@ -17,8 +18,18 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="@string/view_email"
+            android:hint="@string/edit_email_notinput"
             android:inputType="textEmailAddress"
+            android:maxLines="1"
+            android:layout_marginBottom="20dp"/>
+        <EditText
+            android:id="@+id/apply_couplenm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:hint="@string/edit_couplenm_notinput"
+            android:inputType="textPersonName"
             android:maxLines="1" />
     </LinearLayout>
     <LinearLayout
