--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,50 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <data>
-
         <variable
             name="couple"
             type="link.couple.jin.couplelink.data.CoupleClass" />
     </data>
-
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp"
+        android:layout_margin="10dp">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:background="@drawable/rounded"
-            android:layout_margin="10dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/link_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/link_info_view">
+                    <TextView
+                        android:id="@+id/link_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{couple.title}" />
 
-            <TextView
-                android:id="@+id/link_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/link_category"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{couple.category}"
+                            android:layout_weight="1"
+                            android:gravity="left"/>
 
-            <ImageView
-                android:id="@+id/link_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:layout_below="@+id/link_category"
-                android:layout_centerHorizontal="true" />
-        </RelativeLayout>
-    </LinearLayout>
+                        <TextView
+                            android:id="@+id/link_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{couple.date}"
+                            android:layout_weight="1"
+                            android:gravity="right"/>
+                    </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1.5dp"
+                        android:background="#e6e6e6"/>
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/link_image"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="300dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@mipmap/ic_launcher"
+                    android:layout_below="@+id/link_info_view"
+                    android:layout_centerHorizontal="true" />
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </layout>
