카테고리 삭제 예정 클립보드 저장시 알림으로 알려줌
알림으로 들어올때 바로 링크 등록하도록 하는걸 개발합시다.뀨뀨

--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -11,7 +11,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeActivity">
+        tools:context=".home.HomeActivity">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/home_recycler"
@@ -21,11 +21,11 @@
 
         <Button
             android:id="@+id/btn_write"
-            android:text="쓰기"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="bottom|right"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:background="@drawable/write"/>
 
 
         <android.support.design.widget.AppBarLayout
@@ -70,7 +70,7 @@
                             android:textSize="21dp" />
 
                         <FrameLayout
-                            android:id="@+id/fl_setting"
+                            android:id="@+id/fl_search"
                             android:layout_width="50dp"
                             android:layout_height="45dp"
                             android:layout_alignParentEnd="true">
@@ -79,7 +79,7 @@
                                 android:layout_width="21dp"
                                 android:layout_height="21dp"
                                 android:layout_gravity="center"
-                                android:src="@drawable/setting_icon" />
+                                android:src="@drawable/search_icon" />
                         </FrameLayout>
                     </RelativeLayout>
 
