--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -40,7 +40,8 @@
                             android:layout_height="wrap_content"
                             android:text="@{couple.category}"
                             android:layout_weight="1"
-                            android:gravity="left"/>
+                            android:gravity="left"
+                            android:visibility="gone"/>
 
                         <TextView
                             android:id="@+id/link_date"
