--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+        <!--<item-->
+            <!--android:id="@+id/navigat_category"-->
+            <!--android:checked="true"-->
+            <!--android:title="@string/menu_category" />-->
         <item
-            android:id="@+id/navigation_item_attachment"
-            android:checked="true"
-            android:title="@string/menu_category" />
-        <item
-            android:id="@+id/navigation_item_images"
+            android:id="@+id/navigat_setting"
             android:title="@string/menu_setting" />
         <item
-            android:id="@+id/navigation_item_location"
+            android:id="@+id/navigat_logout"
             android:title="@string/menu_logout" />
     </group>
 </menu>
