홈페이지 내의 이미지 태그를 가져옴 순서대로 4개까지 가져오고 og태그 이미지는 맨 앞에 추가하도록 설정 viewpager를 이용해서 미리보기 이미지 최대 5개 보여주면 될듯

--- a/app/src/main/res/layout/dialog_write.xml
+++ b/app/src/main/res/layout/dialog_write.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="http://movie.naver.com/movie/bi/mi/basic.nhn?code=155665" />
+        android:text="http://yun4794.blog.me/221154488861" />
 
     <Button
         android:id="@+id/btn_preview"
