frame태그를 파싱하는 방법을 찾아서 설정하면 됨 viewpager도 수정 필요

--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -47,22 +47,21 @@
                             android:id="@+id/link_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@{couple.date}"
+                            android:layout_above="@+id/link_image"
+                            android:layout_alignParentStart="true"
                             android:layout_weight="1"
-                            android:gravity="right"/>
+                            android:gravity="right"
+                            android:text="@{couple.date}" />
                     </LinearLayout>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1.5dp"
                         android:background="#e6e6e6"/>
                 </LinearLayout>
-                <ImageView
+                <android.support.v4.view.ViewPager
                     android:id="@+id/link_image"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:maxHeight="300dp"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@mipmap/ic_launcher"
                     android:layout_below="@+id/link_info_view"
                     android:layout_centerHorizontal="true" />
             </RelativeLayout>
