이미징 처리는 완료 어떻게 보여줄지만 생각하면됨 하지만 뷰페이저의 높이를 설정안해주면 안나옴 이문제 해결필요 이미지는 아무래도 뒤에 무언가 있다는걸 알게하기위해서 책형식으로 넘기는것도 좋을듯

--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -60,7 +60,7 @@
                 </LinearLayout>
                 <android.support.v4.view.ViewPager
                     android:id="@+id/link_image"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/link_info_view"
                     android:layout_centerHorizontal="true" />
