--- a/app/src/main/res/layout/link_img_item.xml
+++ b/app/src/main/res/layout/link_img_item.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/link_image"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:maxHeight="300dp"
         android:scaleType="fitCenter"
         app:srcCompat="@mipmap/ic_launcher"
@@ -24,7 +24,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/back" />
+            app:srcCompat="@drawable/back"
+            android:layout_gravity="center"/>
     </FrameLayout>
 
     <FrameLayout
@@ -37,7 +38,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/back" />
+            app:srcCompat="@drawable/back"
+            android:layout_gravity="center"/>
     </FrameLayout>
 
 
