--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -61,7 +61,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/link_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:layout_below="@+id/link_info_view"
                     android:layout_centerHorizontal="true" />
             </RelativeLayout>
