--- a/app/src/main/res/layout/link_img_item.xml
+++ b/app/src/main/res/layout/link_img_item.xml
@@ -1,46 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/link_image"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:maxHeight="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/app_name"
         android:scaleType="fitCenter"
         app:srcCompat="@mipmap/ic_launcher"
-        android:contentDescription="@string/app_name"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"/>
 
-    <FrameLayout
+    <ImageView
         android:id="@+id/left_btn"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/link_image"
-        android:layout_alignParentTop="true">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/back"
-            android:layout_gravity="center"/>
-    </FrameLayout>
-
-    <FrameLayout
+        android:background="@drawable/back"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/link_image" />
+    <ImageView
         android:id="@+id/right_btn"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/link_image"
-        android:layout_alignEnd="@+id/link_image"
-        android:layout_alignParentTop="true">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/back"
-            android:layout_gravity="center"/>
-    </FrameLayout>
+        android:background="@drawable/back"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/link_image" />
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
